# ansible-role-tripleo-modify-image

./: .ansible-lint  .gitignore  .gitreview  .pre-commit-config.yaml  README.md  README.rst  ansible.cfg  setup.cfg  setup.py  test-requirements.txt  tox.ini
defaults/: main.yml
files/: compare-package-json.py  dev_install.sh  rpm_install.sh  yum_update.sh
meta/: main.yml
tasks/: dev_install.yml  get_original_user.yml  main.yml  modify_image.yml  precheck.yml  rpm_install.yml  set_defaults.yml  yum_install.yml  yum_install_buildah.yml  yum_install_docker.yml  yum_update.yml  yum_update_buildah.yml  yum_update_docker.yml
templates/: Dockerfile-dev.j2  Dockerfile-rpm.j2  Dockerfile-yum.j2  Dockerfile.j2  yum_update.sh.j2
vars/: main.yml
zuul.d/: layout.yaml
