[metadata]
name = ansible-role-tripleo-modify-image
summary = ansible-tripleo-modify-image - Ansible role to allow modification to container images built for the TripleO project.
description-file =
    README.md
author = TripleO Team
author-email = sbaker@redhat.com
home-page = https://git.openstack.org/cgit/openstack/ansible-role-tripleo-modify-image
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/tripleo-modify-image/defaults = defaults/*
    share/ansible/roles/tripleo-modify-image/meta = meta/*
    share/ansible/roles/tripleo-modify-image/tasks = tasks/*
    share/ansible/roles/tripleo-modify-image/templates = templates/*
    share/ansible/roles/tripleo-modify-image/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

